# LibFd

./: CMakeLists.txt  Makefile  readme.md
examples/: AutoClosingFileDescriptor.cpp  CMakeLists.txt  CommunicationBetweenThreads.cpp  DataOnEvent.cpp  LoopPlusTrackedStdin.cpp  TrackStdin.cpp  UsingPipe.cpp
examples/src/: AutoClosingFileDescriptor.cpp  UsingPipe.cpp
include/: FdMonitor.hpp  FileDescriptor.hpp  Pipe.hpp  StateFd.hpp  TimerFd.hpp
src/: FdMonitor.cpp  FileDescriptor.cpp  Pipe.cpp  StateFd.cpp  TimerFd.cpp
